[gd_scene load_steps=11 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://resources/Themes/defaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://resources/Fonts/defaultFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://resources/Enemies/Styles/HealthBar.gd" type="Script" id=4]
[ext_resource path="res://resources/Enemies/Styles/backgroundInfoPanel.tres" type="StyleBox" id=5]
[ext_resource path="res://resources/Game Architecture/EnemeyPanel.gd" type="Script" id=6]
[ext_resource path="res://MISC/reallySimpleScripts/showBall.gd" type="Script" id=7]
[ext_resource path="res://MISC/reallySimpleScripts/addText.gd" type="Script" id=9]
[ext_resource path="res://MISC/reallySimpleScripts/addRectTexture.gd" type="Script" id=10]
[ext_resource path="res://MISC/reallySimpleScripts/addHealthText.gd" type="Script" id=11]

[node name="EnemyPanel" type="Panel"]
anchor_right = 0.5
anchor_bottom = 0.3
mouse_filter = 2
theme = ExtResource( 2 )
custom_styles/panel = ExtResource( 5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="PanelContainer" parent="."]
anchor_left = 0.25
anchor_top = 0.2
anchor_right = 0.75
anchor_bottom = 0.6
theme = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 263.0
margin_bottom = 223.4
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
script = ExtResource( 10 )

[node name="title Panel" type="Panel" parent="."]
anchor_left = 0.1
anchor_top = 0.05
anchor_right = 0.9
anchor_bottom = 0.17
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="title Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health Panel" type="Panel" parent="."]
anchor_left = 0.1
anchor_top = 0.65
anchor_right = 0.9
anchor_bottom = 0.75
theme = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Health Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Health Panel"]
anchor_left = 0.25
anchor_top = 0.55
anchor_right = 0.75
anchor_bottom = 0.8
margin_right = 10.0
margin_bottom = 10.0
theme = ExtResource( 2 )
value = 96.0
percent_visible = false
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnPanel" type="Panel" parent="."]
anchor_left = 0.1
anchor_top = 0.8
anchor_right = 0.9
anchor_bottom = 0.95
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="TurnPanel"]
anchor_right = 1.0
anchor_bottom = 0.4
theme = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Their Next Turn[/center]"
text = "Their Next Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pos1" type="Control" parent="TurnPanel"]
margin_left = 30.0
margin_top = 55.0
margin_right = 30.0
margin_bottom = 55.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pos2" type="Control" parent="TurnPanel"]
margin_left = 70.0
margin_top = 55.0
margin_right = 70.0
margin_bottom = 55.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
pos = 1

[node name="pos3" type="Control" parent="TurnPanel"]
margin_left = 110.0
margin_top = 55.0
margin_right = 110.0
margin_bottom = 55.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
pos = 2

[node name="pos4" type="Control" parent="TurnPanel"]
margin_left = 150.0
margin_top = 55.0
margin_right = 150.0
margin_bottom = 55.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
pos = 3

[node name="pos5" type="Control" parent="TurnPanel"]
margin_left = 190.0
margin_top = 55.0
margin_right = 190.0
margin_bottom = 55.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
pos = 4

[node name="pos6" type="Control" parent="TurnPanel"]
margin_left = 230.0
margin_top = 55.0
margin_right = 230.0
margin_bottom = 55.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
pos = 5

[node name="pos7" type="Control" parent="TurnPanel"]
margin_left = 270.0
margin_top = 55.0
margin_right = 270.0
margin_bottom = 55.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
pos = 6

[node name="pos8" type="Control" parent="TurnPanel"]
margin_left = 310.0
margin_top = 55.0
margin_right = 310.0
margin_bottom = 55.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
pos = 7

[node name="pos9" type="Control" parent="TurnPanel"]
margin_left = 360.0
margin_top = 55.0
margin_right = 270.0
margin_bottom = 55.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
pos = 8

[node name="pos10" type="Control" parent="TurnPanel"]
margin_left = 400.0
margin_top = 55.0
margin_right = 400.0
margin_bottom = 55.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
pos = 9

[connection signal="clearBalls" from="." to="TurnPanel/pos1" method="_on_EnemyPanel_clearBalls"]
[connection signal="clearBalls" from="." to="TurnPanel/pos2" method="_on_EnemyPanel_clearBalls"]
[connection signal="clearBalls" from="." to="TurnPanel/pos3" method="_on_EnemyPanel_clearBalls"]
[connection signal="clearBalls" from="." to="TurnPanel/pos4" method="_on_EnemyPanel_clearBalls"]
[connection signal="clearBalls" from="." to="TurnPanel/pos5" method="_on_EnemyPanel_clearBalls"]
[connection signal="clearBalls" from="." to="TurnPanel/pos6" method="_on_EnemyPanel_clearBalls"]
[connection signal="clearBalls" from="." to="TurnPanel/pos7" method="_on_EnemyPanel_clearBalls"]
[connection signal="clearBalls" from="." to="TurnPanel/pos8" method="_on_EnemyPanel_clearBalls"]
[connection signal="clearBalls" from="." to="TurnPanel/pos10" method="_on_EnemyPanel_clearBalls"]
[connection signal="sendHealthToBar" from="." to="Health Panel/ProgressBar" method="_on_EnemyPanel_sendHealthToBar"]
[connection signal="sendHealthToText" from="." to="Health Panel/RichTextLabel" method="_on_EnemyPanel_sendHealthToText"]
[connection signal="sendTitle" from="." to="title Panel/RichTextLabel" method="_on_EnemyPanel_sendTitle"]
[connection signal="setBall" from="." to="TurnPanel/pos1" method="_on_EnemyPanel_setBall"]
[connection signal="setBall" from="." to="TurnPanel/pos2" method="_on_EnemyPanel_setBall"]
[connection signal="setBall" from="." to="TurnPanel/pos3" method="_on_EnemyPanel_setBall"]
[connection signal="setBall" from="." to="TurnPanel/pos4" method="_on_EnemyPanel_setBall"]
[connection signal="setBall" from="." to="TurnPanel/pos5" method="_on_EnemyPanel_setBall"]
[connection signal="setBall" from="." to="TurnPanel/pos6" method="_on_EnemyPanel_setBall"]
[connection signal="setBall" from="." to="TurnPanel/pos7" method="_on_EnemyPanel_setBall"]
[connection signal="setBall" from="." to="TurnPanel/pos8" method="_on_EnemyPanel_setBall"]
[connection signal="setBall" from="." to="TurnPanel/pos9" method="_on_EnemyPanel_setBall"]
[connection signal="setBall" from="." to="TurnPanel/pos10" method="_on_EnemyPanel_setBall"]
[connection signal="setTexture" from="." to="panel/TextureRect" method="_on_setTexture"]
